--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -13,7 +13,7 @@
 <script>
   $(function ()
   {
-    $('#login-button-2').click(() => solid.auth.popupLogin({ solidLoginUrl }));
+    $('#login-button-2').click(showSolidLogin);
   });
 </script>
 }
