Using pin:storage to find users POD root.
Adding cache busters to JS files. Including a few more as common files (now that the profile is used all over).

--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -82,14 +82,11 @@
 
 @section Scripts
 {
-  <script src="~/lib/rdflib/dist/rdflib.min.js"></script>
   <script src="~/lib/vuelidate/dist/vuelidate.min.js"></script>
   <script src="~/lib/vuelidate/dist/validators.min.js"></script>
   <script src="~/lib-local/waitme/waitMe.min.js"></script>
-  <script src="~/js/namespaces.js"></script>
-  <script src="~/js/ORDFMapper.js"></script>
-  <script src="~/js/imagePreviewer.js"></script>
-  <script src="~/js/modelRepository.js"></script>
-  <script src="~/js/imageRepository.js"></script>
-  <script src="~/js/models.js"></script>
+  <script src="~/js/imagePreviewer.js" asp-append-version="true"></script>
+  <script src="~/js/modelRepository.js" asp-append-version="true"></script>
+  <script src="~/js/imageRepository.js" asp-append-version="true"></script>
+  <script src="~/js/models.js" asp-append-version="true"></script>
 }
