--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,6 +50,10 @@
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/lib/vue/dist/vue.min.js"></script>
     <script src="~/js/vue-addons.js"></script>
+    <script src="~/lib/rdflib/dist/rdflib.min.js"></script>
+    <script src="~/js/ORDFMapper.js" asp-append-version="true"></script>
+    <script src="~/js/namespaces.js" asp-append-version="true"></script>
+    <script src="~/js/profileService.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
   </environment>
   <environment exclude="Development">
@@ -59,6 +63,10 @@
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/lib/vue/dist/vue.min.js"></script>
     <script src="~/js/vue-addons.js"></script>
+    <script src="~/lib/rdflib/dist/rdflib.min.js"></script>
+    <script src="~/js/ORDFMapper.js" asp-append-version="true"></script>
+    <script src="~/js/namespaces.js" asp-append-version="true"></script>
+     <script src="~/js/profileService.min.js" asp-append-version="true"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
   </environment>
 
