--- a/Views/Home/Locations.cshtml
+++ b/Views/Home/Locations.cshtml
@@ -70,13 +70,10 @@
 
 @section Scripts
 {
-  <script src="~/lib/rdflib/dist/rdflib.min.js"></script>
   <!-- <script src="~/lib/moment/min/moment.min.js"></script>
   <script src="~/lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script> -->
   <script src="~/lib/vuelidate/dist/vuelidate.min.js"></script>
   <script src="~/lib/vuelidate/dist/validators.min.js"></script>
-  <script src="~/js/namespaces.js"></script>
-  <script src="~/js/ORDFMapper.js"></script>
-  <script src="~/js/locationRepository.js"></script>
-  <script src="~/js/locations.js"></script>
+  <script src="~/js/locationRepository.js" asp-append-version="true"></script>
+  <script src="~/js/locations.js" asp-append-version="true"></script>
 }
