Add user icon (cannot figure out how to color it) and make it clickable to user profile.
Remove RDF test stuff.

--- a/Views/Shared/_Navigation.cshtml
+++ b/Views/Shared/_Navigation.cshtml
@@ -18,10 +18,12 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li id="login-container">
-        <a id="login-button" href="#"><span class="glyphicon glyphicon-log-in"></span> Log in</a>
+        <a id="login-button" href="#">Log in</a>
       </li>
       <li id="logout-container">
-        <span id="user-badge" class="navbar-text" data-toggle="tooltip" data-placement="bottom">USER</span>
+        <a id="user-badge" class="navbar-text" data-toggle="tooltip" data-placement="bottom">
+          <img src="~/open-iconic/svg/person.svg" alt="User profile">
+        </a>
         &nbsp;
         <a id="logout-button" href="#">Log out</a>
       </li>
