Add settings page.
Introduce profileService.rcStorageRoot.
Move cancel button to the right.
New navbar color (not really perfect).

--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -4,7 +4,7 @@
 
 <h1>Login</h1>
 
-<p>Pleae login before using SolidRC.</p>
+<p>Please login before using SolidRC.</p>
 
 <a class="btn btn-primary" id="login-button-2" href="#">Log in</a>
 
