--- a/Views/Shared/_Navigation.cshtml
+++ b/Views/Shared/_Navigation.cshtml
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#">SolidRC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
         <a id="login-button" href="#">Log in</a>
       </li>
       <li id="logout-container">
-        <a id="user-badge" class="navbar-text" data-toggle="tooltip" data-placement="bottom">
+        <a id="user-badge" class="navbar-text" data-toggle="tooltip" data-placement="bottom" href="@Url.Action("Settings")">
           <img src="~/open-iconic/svg/person.svg" alt="User profile">
         </a>
         &nbsp;
