A bit of cleaning up. Now deploying!
See https://solidrc.azurewebsites.net/

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
   </environment>
   <environment exclude="Development">
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
   </environment>
 
   @RenderSection("Styles", required: false)
@@ -66,8 +66,8 @@
     <script src="~/js/vue-addons.js"></script>
     <script src="~/js/ORDFMapper.js" asp-append-version="true"></script>
     <script src="~/js/namespaces.js" asp-append-version="true"></script>
-     <script src="~/js/profileService.min.js" asp-append-version="true"></script>
-    <script src="~/js/site.min.js" asp-append-version="true"></script>
+     <script src="~/js/profileService.js" asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
   </environment>
 
 
