--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
               </div>
               <div class="col">
                 <div class="form-group">
-                  <label for="selectedDuration">Duration (min.)</label>
+                  <label for="selectedDuration">Duration</label>
                   <input v-model="$v.selectedDuration.$model" :class="validationStatus($v.selectedDuration)" id="selectedDuration" placeholder="HH:MM:SS">
                 </div>
               </div>
