--- a/Views/Home/Locations.cshtml
+++ b/Views/Home/Locations.cshtml
@@ -58,6 +58,7 @@
         </div>
 
         <div class="modal-footer">
+          <!-- [{{formState}}] -->
           <button v-if="formState=='add'" type="button" class="btn btn-primary" v-on:click="addLocation()" id="buttonAdd">Add</button>
           <button v-if="formState=='edit'"type="button" class="btn btn-primary" v-on:click="saveLocation()" id="buttonSave">Save</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
