--- a/Views/Home/Settings.cshtml
+++ b/Views/Home/Settings.cshtml
@@ -5,57 +5,59 @@
 <h1>Settings</h1>
 
 <div class="alert alert-info" role="alert">
-  <p>Here you can see what Solid-RC has configured, based on your personal profile settings from your own POD.</p>
+  <p>These are the settings that SolidRC uses. The settings are based on your personal profile settings from your own POD.</p>
 </div>
 
 <div id="settingsApp">
-  <form>
-    <div class="form-group">
-      <label for="webId">Logged in as</label>
-      <div class="input-group">
-        <input v-model="webId" id="webId" class="form-control" readonly>
-        <div class="input-group-text">
-          <a :href="webId"><img src="~/open-iconic/svg/external-link.svg" alt="Open profile" title="Open profile"></a>
+  <data-load v-bind:loading="loading">
+    <form v-cloak>
+      <div class="form-group">
+        <label for="webId">Logged in as</label>
+        <div class="input-group">
+          <input v-model="webId" id="webId" class="form-control" readonly>
+          <div class="input-group-text">
+            <a :href="webId"><img src="~/open-iconic/svg/external-link.svg" alt="Open profile" title="Open profile"></a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="logbookStorage">Data location for logbook</label>
-      <div class="input-group">
-        <input v-model="logbookStorage" id="logbookStorage" class="form-control" readonly>
-        <div class="input-group-text">
-          <a :href="logbookStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+      <div class="form-group">
+        <label for="logbookStorage">Data location for logbook</label>
+        <div class="input-group">
+          <input v-model="logbookStorage" id="logbookStorage" class="form-control" readonly>
+          <div class="input-group-text">
+            <a :href="logbookStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="modelStorage">Data location for models</label>
-      <div class="input-group">
-        <input v-model="modelStorage" id="modelStorage" class="form-control" readonly>
-        <div class="input-group-text">
-          <a :href="modelStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+      <div class="form-group">
+        <label for="modelStorage">Data location for models</label>
+        <div class="input-group">
+          <input v-model="modelStorage" id="modelStorage" class="form-control" readonly>
+          <div class="input-group-text">
+            <a :href="modelStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="modelImageStorage">Data location for model images</label>
-      <div class="input-group">
-        <input v-model="modelImageStorage" id="modelImageStorage" class="form-control" readonly>
-        <div class="input-group-text">
-          <a :href="modelImageStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+      <div class="form-group">
+        <label for="modelImageStorage">Data location for model images</label>
+        <div class="input-group">
+          <input v-model="modelImageStorage" id="modelImageStorage" class="form-control" readonly>
+          <div class="input-group-text">
+            <a :href="modelImageStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="locationStorage">Data location for locations</label>
-      <div class="input-group">
-        <input v-model="locationStorage" id="locationStorage" class="form-control" readonly>
-        <div class="input-group-text">
-          <a :href="locationStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+      <div class="form-group">
+        <label for="locationStorage">Data location for locations</label>
+        <div class="input-group">
+          <input v-model="locationStorage" id="locationStorage" class="form-control" readonly>
+          <div class="input-group-text">
+            <a :href="locationStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+          </div>
         </div>
       </div>
-    </div>
-  </form>
+    </form>
+  </data-load>
 </div>
 
 
