--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -10,7 +10,7 @@
 <h1>Models</h1>
 
 <div class="alert alert-primary" role="alert" id="pageAlert">
-  Please reload page after changing photo.
+  <p>Please reload page after changing photo.</p>
 </div>
 
 <div id="modelsApp">
