Starting work on docs.

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "About SolidRC";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h1>@ViewData["Title"]</h1>
 
-<p>Use this area to provide additional information.</p>
+<p>SolidRC is a personal project by Jørn Wildt, Allerød, Denmark. The purpose is first and foremost
+    to explore the possibilities of the <a href="https://solid.inrupt.com/">Solid</a> framework,
+    but the result so far is nice little tracker of activites with radio controlled toys.
+</p>
