--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h2>@ViewData["Title"]</h2>
+<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>SolidRC does not collect any kinds of personal data. Content you add through the SolidRC application
+    is stored in your own Solid POD and is thus under your own control.</p>
+
