--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -2,11 +2,27 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<h1>Remote Controlled Flight Log</h1>
 
-<p>Please login before using SolidRC.</p>
+<h3>Register your radio controlled models and flights</h3>
 
-<a class="btn btn-primary" id="login-button-2" href="#">Log in</a>
+<p>Please login. Solid-RC does not work without connecting to your personal Solid POD.</p>
+
+<hr />
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <p>Login with an existing Solid POD account.</p>
+      <a class="btn btn-primary" id="login-button-2" href="#">Log in</a>
+    </div>
+    <div class="col">
+      <p>If you do not already have a Solid POD then register one today.</p>
+      <a class="btn btn-primary" href="https://solid.inrupt.com/get-a-solid-pod">Register</a>
+    </div>
+  </div>
+</div>
+
 
 @section Scripts
 {
