--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,6 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>SolidRC does not collect any kinds of personal data. Content you add through the SolidRC application
+<p>Solid-RC does not collect any kinds of personal data. Content you add through the Solid-RC application
     is stored in your own Solid POD and is thus under your own control.</p>
 
