--- a/Views/Home/Settings.cshtml
+++ b/Views/Home/Settings.cshtml
@@ -5,7 +5,7 @@
 <h1>Settings</h1>
 
 <div class="alert alert-info" role="alert">
-  <p>These are the settings that SolidRC uses. The settings are based on your personal profile settings from your own POD.</p>
+  <p>These are the settings that Solid-RC uses. The settings are based on your personal profile settings from your own POD.</p>
 </div>
 
 <div id="settingsApp">
