--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,9 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "About SolidRC";
+    ViewData["Title"] = "About Solid-RC";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>SolidRC is a personal project by Jørn Wildt, Allerød, Denmark. The purpose is first and foremost
-    to explore the possibilities of the <a href="https://solid.inrupt.com/">Solid</a> framework,
-    but the result so far is nice little tracker of activites with radio controlled toys.
-</p>
+<p>Solid-RC is a personal project by Jørn Wildt, Allerød, Denmark. The purpose is first and foremost
+    to explore the possibilities of the <a href="https://solid.inrupt.com/">Solid</a> framework.
+    The result so far is nice little tracker of activites with radio controlled toys - feel free to
+    play around with it.</p>
+
+<p>Any content you create will be stored in your own Solid POD. This means the content will still exist long after
+   the Solid-RC application is gone. Your content belongs to you - not Solid-RC.</p>
+
+<p>This also means you need to create a Solid POD before starting Solid-RC. Se <a href="https://solid.inrupt.com/how-it-works">Solid Explained</a>
+for more information about Solid.</p>
