--- a/Views/Shared/_Navigation.cshtml
+++ b/Views/Shared/_Navigation.cshtml
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="#">SolidRC</a>
+  <a class="navbar-brand" href="#">Solid-RC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
