Avoid redirects on About and other pages.

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -13,3 +13,10 @@
 
 <p>This also means you need to create a Solid POD before starting Solid-RC. Se <a href="https://solid.inrupt.com/how-it-works">Solid Explained</a>
 for more information about Solid.</p>
+
+@section Head
+{
+<script>
+  doRedirectAnonymous = false;
+</script>
+}
