--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -6,3 +6,10 @@
 <p>Solid-RC is a personal project by Jørn Wildt, Allerød, Denmark. If you have any issues, comments or questions
     then please add them on <a href="https://github.com/JornWildt/SolidRC">GitHub</a>.
 </p>
+
+@section Head
+{
+<script>
+  doRedirectAnonymous = false;
+</script>
+}
