--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -6,9 +6,15 @@
 
 <h3>Register your radio controlled models and flights</h3>
 
-<p>Please login. Solid-RC does not work without connecting to your personal Solid POD.</p>
+<p>Solid-RC is a an app for logging flights with your radio controlled models. Register your models and flying sites and start logging your flights.</p>
+
+<h3>Your content - your data</h3>
+
+<p>Solid-RC stores your registrations in your own <a href="https://solid.inrupt.com/how-it-works">personal Solid POD</a> - a secure and private data storage on the web.</p>
 
 <hr />
+
+<p>Start by connecting Solid-RC to your personal POD.</p>
 
 <div class="container">
   <div class="row">
@@ -23,6 +29,12 @@
   </div>
 </div>
 
+@section Head
+{
+<script>
+  doRedirectAnonymous = false;
+</script>
+}
 
 @section Scripts
 {
