--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Models";
 }
 
-@section Styles
+@section Head
 {
   <link rel="stylesheet" href="~/lib/waitme/waitMe.min.css" />
 }
