--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,14 +5,20 @@
 
 <p>Solid-RC is a personal project by Jørn Wildt, Allerød, Denmark. The purpose is first and foremost
     to explore the possibilities of the <a href="https://solid.inrupt.com/">Solid</a> framework.
-    The result so far is nice little tracker of activites with radio controlled toys - feel free to
+    The result so far is this little tracker of activites with radio controlled toys - feel free to
     play around with it.</p>
 
 <p>Any content you create will be stored in your own Solid POD. This means the content will still exist long after
-   the Solid-RC application is gone. Your content belongs to you - not Solid-RC.</p>
+   the Solid-RC application is gone - your content belongs to you, not Solid-RC! But please be aware that while 
+   content produced via Solid-RC resides on your POD it still needs some sort of application to make sense out
+   of it.</p>
 
-<p>This also means you need to create a Solid POD before starting Solid-RC. Se <a href="https://solid.inrupt.com/how-it-works">Solid Explained</a>
+<p>This also means you need to create a Solid POD before starting Solid-RC. See <a href="https://solid.inrupt.com/how-it-works">Solid Explained</a>
 for more information about Solid.</p>
+
+<p>Solid-RC is open source and can always be downloaded, built and installed on your own ASP.NET Core server.
+    The source code is available from <a href="https://github.com/JornWildt/SolidRC">GitHub</a>
+</p>
 
 @section Head
 {
