--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -3,9 +3,12 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Solid-RC is a personal project by Jørn Wildt, Allerød, Denmark. If you have any issues, comments or questions
-    then please add them on <a href="https://github.com/JornWildt/SolidRC">GitHub</a>.
+<p>Solid-RC is a personal project by Jørn Wildt, Allerød, Denmark. If you have any issues or questions
+    then please add them on <a href="https://github.com/JornWildt/SolidRC">GitHub</a>. Do not expect
+    too much regarding feature requests - this is after all only a hobby project.
 </p>
+
+<p>You can also contact Jørn directly on <a href="mailto:jw@elfisk.dk">jw@elfisk.dk</a> if you just want to say hi.</p>
 
 @section Head
 {
