--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -4,7 +4,11 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Solid-RC does not collect any kinds of personal data. Content you add through the Solid-RC application
-    is stored in your own Solid POD and is thus under your own control.</p>
+    is stored in your own Solid POD and is thus under your and your POD provider's control - not Solid-RC's.</p>
+
+<h3>Cookies</h3>
+
+<p>Solid-RC only uses cookies for session state management.</p>
 
 @section Head
 {
