--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,29 +20,41 @@
   </div>
 
   <data-load v-bind:loading="loading">
-    <table class="table log-entries" v-cloak>
-      <tbody>
-        <tr v-for="entry in logEntries" v-bind:entry="entry" v-bind:key="entry.id">
-          <td><linked-image height="60" v-bind:item="entry.modelThumbnail"></td>
-          <td>
-            <div>
-              {{entry.date}} - <linked-value v-bind:item="entry.locationName"></linked-value> 
-              <span v-if="entry.duration">({{entry.durationText}})</span>
-            </div>
-            <div>
-              <linked-value v-bind:item="entry.modelName"></linked-value>
-            </div>
-            <div v-if="entry.comment" class="log-comment">
-              {{entry.comment}}
-            </div>
-          </td>
-          <td>
-            <a href="#" v-on:click="editEntry(entry)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
-            <a href="#" v-on:click="deleteEntry(entry)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div v-cloak>
+      <table class="table log-entries">
+        <tbody>
+          <tr v-for="entry in logEntries" v-bind:entry="entry" v-bind:key="entry.id">
+            <td><linked-image height="60" v-bind:item="entry.modelThumbnail"></td>
+            <td>
+              <div>
+                {{entry.date}} - <linked-value v-bind:item="entry.locationName"></linked-value> 
+                <span v-if="entry.duration">({{entry.durationText}})</span>
+              </div>
+              <div>
+                <linked-value v-bind:item="entry.modelName"></linked-value>
+              </div>
+              <div v-if="entry.comment" class="log-comment">
+                {{entry.comment}}
+              </div>
+            </td>
+            <td>
+              <a href="#" v-on:click="editEntry(entry)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
+              <a href="#" v-on:click="deleteEntry(entry)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <nav aria-label="Search result pages">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav> 
+    </div>   
   </data-load>
 
   <div class="modal fade" data-show="false" id="entryDialog" tabindex="-1" role="dialog" aria-labelledby="entryDialogLabel" aria-hidden="true">
