Make sure settings page show what the repos are using.

--- a/Views/Home/Settings.cshtml
+++ b/Views/Home/Settings.cshtml
@@ -65,6 +65,7 @@
 {
   <script src="~/js/settings.js" asp-append-version="true"></script>
   <script src="~/js/locationRepository.js" asp-append-version="true"></script>
+  <script src="~/js/imageRepository.js" asp-append-version="true"></script>
   <script src="~/js/modelRepository.js" asp-append-version="true"></script>
   <script src="~/js/logbookRepository.js" asp-append-version="true"></script>
 }
