Reduce the number of times ProfileService initializes and issues HTTP requests.

--- a/Views/Home/Settings.cshtml
+++ b/Views/Home/Settings.cshtml
@@ -16,7 +16,7 @@
         <div class="input-group">
           <input v-model="webId" id="webId" class="form-control" readonly>
           <div class="input-group-text">
-            <a :href="webId"><img src="~/open-iconic/svg/external-link.svg" alt="Open profile" title="Open profile"></a>
+            <a :href="webId" target="_new"><img src="~/open-iconic/svg/external-link.svg" alt="Open profile" title="Open profile"></a>
           </div>
         </div>
       </div>
@@ -25,7 +25,7 @@
         <div class="input-group">
           <input v-model="logbookStorage" id="logbookStorage" class="form-control" readonly>
           <div class="input-group-text">
-            <a :href="logbookStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+            <a :href="logbookStorage" target="_new"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
         <div class="input-group">
           <input v-model="modelStorage" id="modelStorage" class="form-control" readonly>
           <div class="input-group-text">
-            <a :href="modelStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+            <a :href="modelStorage" target="_new"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
         <div class="input-group">
           <input v-model="modelImageStorage" id="modelImageStorage" class="form-control" readonly>
           <div class="input-group-text">
-            <a :href="modelImageStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+            <a :href="modelImageStorage" target="_new"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
         <div class="input-group">
           <input v-model="locationStorage" id="locationStorage" class="form-control" readonly>
           <div class="input-group-text">
-            <a :href="locationStorage"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
+            <a :href="locationStorage" target="_new"><img src="~/open-iconic/svg/external-link.svg" alt="Open POD data" title="Open POD data"></a>
           </div>
         </div>
       </div>
