Added Mutex class and using it to avoid duplicate initializations of profile service.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,8 @@
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/lib/vue/vue.js"></script>
     <script src="~/lib/rdflib/rdflib.min.js"></script>
-    <script src="~/js/vue-addons.js"></script>
+    <script src="~/js/mutex.js" asp-append-version="true"></script>
+    <script src="~/js/vue-addons.js" asp-append-version="true"></script>
     <script src="~/js/ORDFMapper.js" asp-append-version="true"></script>
     <script src="~/js/namespaces.js" asp-append-version="true"></script>
     <script src="~/js/profileService.js" asp-append-version="true"></script>
@@ -68,7 +69,8 @@
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/lib/vue/vue.min.js"></script>
     <script src="~/lib/rdflib/rdflib.min.js"></script>
-    <script src="~/js/vue-addons.js"></script>
+    <script src="~/js/mutex.js" asp-append-version="true"></script>
+    <script src="~/js/vue-addons.js" asp-append-version="true"></script>
     <script src="~/js/ORDFMapper.js" asp-append-version="true"></script>
     <script src="~/js/namespaces.js" asp-append-version="true"></script>
      <script src="~/js/profileService.js" asp-append-version="true"></script>
