--- a/Views/Home/Locations.cshtml
+++ b/Views/Home/Locations.cshtml
@@ -18,9 +18,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-for="location in locations" v-bind:location="location" v-bind:key="location.id">
+        <tr class="grid-row" v-for="location in locations" v-bind:location="location" v-bind:key="location.id">
           <td>{{location.name}}</td>
-          <td>
+          <td class="grid-action">
             <a href="#" v-on:click="editLocation(location)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
             <a href="#" v-on:click="deleteLocation(location)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
           </td>
