--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -28,12 +28,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-for="model in models" v-bind:model="model" v-bind:key="model.id">
-          <td>
+        <tr class="grid-row" v-for="model in models" v-bind:model="model" v-bind:key="model.id">
+          <td style="width: 130px">
             <img v-if="model.thumbnail" width="100" height="100" v-bind:src="model.thumbnail">
           </td>
           <td>{{model.name}}</td>
-          <td>
+          <td class="grid-action">
             <a href="#" v-on:click="editModel(model)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
             <a href="#" v-on:click="deleteModel(model)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
           </td>
